# colorie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/colorie/: colorie.h
src/: colorie.c  test.c
